@@ -13,10 +13,12 @@ _reverse_dasoertliche_extract() {
         \#Kein Teilnehmer gefunden:\|keine Treffer finden# {
 	    '"$REVERSE_NA"'
 	}
-	\#<div[[:space:]]\+class="adresse\([[:space:]][^"]*\)\?"[[:space:]]*>#,\#<input[[:space:]]\+type="hidden"\|<div[[:space:]]class="\(topx\|nummer\)"# {
-	    s#^.*<a[[:space:]][^>]*class="preview[^"]*"[^>]*>\([^<]*\).*$#\1#
+	\#<div[[:space:]]\+class="adresse\([[:space:]][^"]*\)\?"[[:space:]]*>#,\#<div[[:space:]]class="\(zusatz\|topx\)"# {
+	    \#<div \+class="counter"# d
+	    \#<script #,\#</script># d
+	    s#^.*<a[[:space:]][^>]*class="preview[^"]*"[^>]*>\(.*\)$#\1#
 	    t holdname
-	    \#<input[[:space:]]\+type="hidden"\|<div[[:space:]]class="\(topx\|nummer\)"# b cleanup
+	    \#<div[[:space:]]class="\(zusatz\|topx\)"# b cleanup
 	    H
         }
         b
