@@ -944,3 +944,7 @@
 	Kleinere Fehler bereinigt
 
 	callmonitor-1.20.5 (beta)
+
+2013-02-01:
+
+	* reverse: DasÖrtliche repariert, adaffix entfernt
